# PolyX

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
app/: BatchProcessor.cpp  BatchProcessor.h  Manifest.cpp  Manifest.h  PolyX.manifest  main.cpp
atlas/: AtlasBuilder.cpp  AtlasBuilder.h  ImageBackend.h  ImageBackend_Windows.cpp  TgaLoader.cpp  TgaLoader.h
core/: Config.cpp  Config.h  Console.cpp  Console.h  Constants.h  Logger.cpp  Logger.h
docs/: ARCHITECTURE.md  BACKLOG.md  CLEANUP.md  UNITY-PIPELINE.md
fbx/: FbxLoader.cpp  FbxLoader.h
scripts/: package-release.ps1
tests/: TestMain.cpp
unity/Editor/: PolyXManifestExporter.cs
uv/: UVAnalyzer.cpp  UVAnalyzer.h  UVRegion.h
